--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -349,6 +349,8 @@
     "noFunds": "कोई फंड नहीं",
     "fundDetails": "फंड विवरण",
     "taxDeductible": "कर कटौती",
+    "enterfundName": " फंड का नाम दर्ज करें",
+    "enterfundId": " फंड आईडी दर्ज करें",
     "default": "डिफ़ॉल्ट",
     "archived": "संग्रहीत",
     "nonArchive": "गैर संग्रहीत",
@@ -357,9 +359,14 @@
     "fundDelete": "फंड हटाएं",
     "no": "नहीं",
     "yes": "हाँ",
+    "archiveFund": "फंड संग्रहीत करें",
+    "archiveFundMsg": "क्या आप इस फंड को संग्रहीत करना चाहते हैं?",
     "fundCreated": "फंड सफलतापूर्वक बनाया गया",
     "fundUpdated": "फंड सफलतापूर्वक अपडेट किया गया",
-    "fundDeleted": "फंड सफलतापूर्वक हटाया गया"
+    "fundDeleted": "फंड सफलतापूर्वक हटाया गया",
+    "fundArchived": "फंड सफलतापूर्वक संग्रहीत किया गया",
+    "fundUnarchived": "फंड सफलतापूर्वक गैर संग्रहीत किया गया",
+    "deleteFundMsg": "क्या आप इस फंड को हटाना चाहते हैं?"
   },
   "orgPost": {
     "title": "तलवा पोस्ट्स",
