--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -348,6 +348,8 @@
     "noFunds": "Pas de fonds",
     "fundDetails": "Détails du fonds",
     "taxDeductible": "Déductible d'impôt",
+    "enterfundName": "Entrez le nom du fonds",
+    "enterfundId": "Entrez l'identifiant du fonds",
     "default": "Défaut",
     "archived": "Archivé",
     "nonArchive": "Non archivé",
@@ -356,9 +358,14 @@
     "fundDelete": "Supprimer le fonds",
     "no": "Non",
     "yes": "Oui",
+    "archiveFund": "Archiver le fonds",
+    "archiveFundMsg": "Voulez-vous archiver ce fonds ?",
     "fundCreated": "Fonds créé avec succès",
     "fundUpdated": "Fonds mis à jour avec succès",
-    "fundDeleted": "Fonds supprimé avec succès"
+    "fundDeleted": "Fonds supprimé avec succès",
+    "fundArchived": "Fonds archivé avec succès",
+    "fundUnarchived": "Fonds désarchivé avec succès",
+    "deleteFundMsg": "Voulez-vous supprimer ce fonds ?"
   },
   "orgPost": {
     "title": "Talawa Publications",
