--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -124,6 +124,8 @@
     "noFunds": "未找到基金",
     "fundDetails": "基金详情",
     "taxDeductible": "允许税收扣除",
+    "enterfundName": " 输入基金名称",
+    "enterfundId": "输入基金ID",
     "default": "默认基金",
     "archived": "已归档",
     "nonArchive": "未归档",
@@ -132,9 +134,14 @@
     "fundDelete": "删除基金",
     "no": "否",
     "yes": "是",
+    "archiveFund": "归档基金",
+    "archiveFundMsg": "您是否要归档此基金？",
     "fundCreated": "基金创建成功",
     "fundUpdated": "基金更新成功",
-    "fundDeleted": "基金删除成功"
+    "fundDeleted": "基金删除成功",
+    "fundArchived": "基金已归档",
+    "fundUnarchived": "基金未归档",
+    "deleteFundMsg": "您是否要删除此基金？"
   },
 
   "orgList": {
