--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -170,7 +170,7 @@
     "joined": "Rejointes",
     "withdraw": "Retirer",
     "orgJoined": "Organisation rejointe avec succès",
-    "MembershipRequests": "Demande d'adhésion envoyée avec succès",
+    "MembershipRequestSent": "Demande d'adhésion envoyée avec succès",
     "AlreadyJoined": "Vous êtes déjà membre de cette organisation.",
     "errorOccured": "Une erreur s'est produite. Veuillez réessayer plus tard."
   },
