--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -170,7 +170,7 @@
     "joined": "शामिल हुए",
     "withdraw": "अनुरोध वापस लें",
     "orgJoined": "संगठन सफलतापूर्वक जुड़ा गया",
-    "MembershipRequests": "सदस्यता अनुरोध सफलतापूर्वक भेजा गया",
+    "MembershipRequestSent": "सदस्यता अनुरोध सफलतापूर्वक भेजा गया",
     "AlreadyJoined": "आप इस संगठन के पहले से ही सदस्य हैं।",
     "errorOccured": "कुछ गड़बड़ हो गई है। कृपया बाद में पुन: प्रयास करें।"
   },
