--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -176,7 +176,7 @@
     "joined": "Joined",
     "withdraw": "Widthdraw",
     "orgJoined": "Joined organization successfully",
-    "MembershipRequests": "Membership request sent successfully",
+    "MembershipRequestSent": "Membership request sent successfully",
     "AlreadyJoined": "You are already a member of this organization.",
     "errorOccured": "An error occurred. Please try again later."
   },
