--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -170,7 +170,7 @@
     "joined": "加入",
     "withdraw": "提取",
     "orgJoined": "成功加入组织",
-    "MembershipRequests": "会员申请已成功发送",
+    "MembershipRequestSent": "会员申请已成功发送",
     "AlreadyJoined": "您已经是该组织的成员。",
     "errorOccured": "发生错误，请稍后重试。"
   },
