Updated UI for Admin-> User Profile

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -575,6 +575,24 @@
     "firstName": "First name",
     "lastName": "Last name",
     "language": "Language",
+    "gender": "Gender",
+    "birthDate": "Birth Date",
+    "educationGrade": "Educational Grade",
+    "employmentStatus": "Employment Status",
+    "maritalStatus": "Marital Status",
+    "displayImage": "Display Image",
+    "phone": "Phone",
+    "address": "Address",
+    "countryCode": "Country Code",
+    "state": "State",
+    "city": "City",
+    "personalInfoHeading": "Personal Information",
+    "contactInfoHeading": "Contact Information",
+    "actionsHeading": "Actions",
+    "personalDetailsHeading": "Personal Details",
+    "appLanguageCode": "Choose Language",
+    "delete": "Delete User",
+    "saveChanges": "Save Changes",
     "adminApproved": "Admin approved",
     "pluginCreationAllowed": "Plugin creation allowed",
     "joined": "Joined",
