--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -570,6 +570,24 @@
     "firstName": "Prénom",
     "lastName": "Nom de famille",
     "language": "Langue",
+    "gender": "Genre",
+    "birthDate": "Date de naissance",
+    "educationGrade": "Niveau d'éducation",
+    "employmentStatus": "Statut d'emploi",
+    "maritalStatus": "État civil",
+    "displayImage": "Image de profil",
+    "phone": "Téléphone",
+    "address": "Adresse",
+    "countryCode": "Code pays",
+    "state": "État",
+    "city": "Ville",
+    "personalInfoHeading": "Informations personnelles",
+    "contactInfoHeading": "Coordonnées",
+    "actionsHeading": "Actions",
+    "personalDetailsHeading": "Détails personnels",
+    "appLanguageCode": "Choisir la langue",
+    "delete": "Supprimer l'utilisateur",
+    "saveChanges": "Enregistrer les modifications",
     "adminApproved": "Approuvé par l'administrateur",
     "pluginCreationAllowed": "Autorisation de création de plugin",
     "joined": "Rejoint",
