--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -572,6 +572,24 @@
     "firstName": "पहला नाम",
     "lastName": "अंतिम नाम",
     "language": "भाषा",
+    "gender": "लिंग",
+    "birthDate": "जन्म तिथि",
+    "educationGrade": "शैक्षिक ग्रेड",
+    "employmentStatus": "रोजगार की स्थिति",
+    "maritalStatus": "वैवाहिक स्थिति",
+    "displayImage": "प्रदर्शन छवि",
+    "phone": "फोन",
+    "address": "पता",
+    "countryCode": "देश कोड",
+    "state": "राज्य",
+    "city": "शहर",
+    "personalInfoHeading": "व्यक्तिगत जानकारी",
+    "contactInfoHeading": "संपर्क जानकारी",
+    "actionsHeading": "कार्रवाई",
+    "personalDetailsHeading": "व्यक्तिगत विवरण",
+    "appLanguageCode": "भाषा चुनें",
+    "delete": "उपयोगकर्ता को हटाएं",
+    "saveChanges": "परिवर्तन सहेजें",
     "adminApproved": "व्यवस्थापक द्वारा स्वीकृत",
     "pluginCreationAllowed": "प्लगइन निर्माण अनुमति दी गई",
     "joined": "शामिल हुए",
