--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -572,6 +572,24 @@
     "firstName": "名字",
     "lastName": "姓氏",
     "language": "语言",
+    "gender": "性别",
+    "birthDate": "出生日期",
+    "educationGrade": "教育程度",
+    "employmentStatus": "就业状况",
+    "maritalStatus": "婚姻状况",
+    "displayImage": "显示图片",
+    "phone": "电话",
+    "address": "地址",
+    "countryCode": "国家代码",
+    "state": "州/省",
+    "city": "城市",
+    "personalInfoHeading": "个人信息",
+    "contactInfoHeading": "联系信息",
+    "actionsHeading": "操作",
+    "personalDetailsHeading": "个人详情",
+    "appLanguageCode": "选择语言",
+    "delete": "删除用户",
+    "saveChanges": "保存更改",
     "adminApproved": "管理员已批准",
     "pluginCreationAllowed": "允许创建插件",
     "joined": "加入",
