--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -570,6 +570,24 @@
     "firstName": "Nombre",
     "lastName": "Apellido",
     "language": "Idioma",
+    "gender": "Género",
+    "birthDate": "Fecha de Nacimiento",
+    "educationGrade": "Nivel Educativo",
+    "employmentStatus": "Estado Laboral",
+    "maritalStatus": "Estado Civil",
+    "displayImage": "Imagen de Perfil",
+    "phone": "Teléfono",
+    "address": "Dirección",
+    "countryCode": "Código de País",
+    "state": "Estado",
+    "city": "Ciudad",
+    "personalInfoHeading": "Información Personal",
+    "contactInfoHeading": "Información de Contacto",
+    "actionsHeading": "Acciones",
+    "personalDetailsHeading": "Detalles Personales",
+    "appLanguageCode": "Elegir Idioma",
+    "delete": "Eliminar Usuario",
+    "saveChanges": "Guardar Cambios",
     "adminApproved": "Aprobado por el administrador",
     "pluginCreationAllowed": "Permitir creación de complementos",
     "joined": "Unido",
