--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -288,7 +288,10 @@
   },
   "organizationActionItems": {
     "actionItemCategory": "कार्य आइटम श्रेणी",
+    "actionItemActive": "क्रिया आइटम सक्रिय",
+    "actionItemCompleted": "क्रिया आइटम पूर्ण हुआ",
     "actionItemDetails": "कार्य आइटम विवरण",
+    "actionItemStatus": "कार्रवाई आइटम स्थिति",
     "assignee": "सौंपने वाला",
     "assigner": "निर्धारक",
     "assignmentDate": "सौंपने की तारीख",
@@ -304,8 +307,11 @@
     "dueDate": "नियत तारीख",
     "earliest": "सबसे पहले",
     "editActionItem": "कार्य आइटम संपादित करें",
+    "eventActionItems": "इवेंट एक्शन आइटम",
     "isCompleted": "पूरा हुआ",
     "latest": "नवीनतम",
+    "makeActive": "सक्रिय करें",
+    "markCompletion": "मार्क पूर्णता",
     "no": "नहीं",
     "noActionItems": "कोई कार्य आइटम नहीं",
     "options": "विकल्प",
