--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -60,6 +60,7 @@
     "menu": "Menú",
     "my organizations": "Mis Organizaciones",
     "users": "Usuarios",
+    "communityProfile": "Perfil de la comunidad",
     "logout": "Cerrar sesión"
   },
   "leftDrawerOrg": {
@@ -173,6 +174,16 @@
     "MembershipRequestSent": "Solicitud de membresía enviada exitosamente",
     "AlreadyJoined": "Ya eres miembro de esta organización.",
     "errorOccured": "Se produjo un error. Por favor, inténtalo de nuevo más tarde."
+  },
+  "communityProfile": {
+    "communityProfile": "Perfil de la comunidad",
+    "editProfile": "Editar perfil",
+    "communityProfileInfo": "Estos detalles aparecerán en la pantalla de inicio de sesión/registro para usted y los miembros de su comunidad.",
+    "communityName": "Nombre de la comunidad",
+    "wesiteLink": "Enlace de página web",
+    "logo": "Logo",
+    "social": "Enlaces de redes sociales",
+    "url": "Introducir URL"
   },
   "dashboard": {
     "title": "Panel de",
