feat: Add Action Items to Event Dashboard (#1669)
* add modals

* design adjustments

* add popover on notes

* add tests and refactor

* add tests for action items modal

* remove unnecassary fields from the update modal

* add translations

* minor correction

* refactor

* fix failing test

* improve coverage

* change left drawer text to 'Event Action Items'

* restore package-lock.json

* corrections

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -266,7 +266,10 @@
   },
   "organizationActionItems": {
     "actionItemCategory": "Catégorie de l'élément d'action",
+    "actionItemActive": "Mesure de suivi active",
+    "actionItemCompleted": "Mesure de suivi terminée",
     "actionItemDetails": "Détails de l'élément d'action",
+    "actionItemStatus": "État de l’action",
     "assignee": "Attributaire",
     "assigner": "Assignateur",
     "assignmentDate": "Date d'attribution",
@@ -282,8 +285,11 @@
     "dueDate": "Date d'échéance",
     "earliest": "Le plus tôt",
     "editActionItem": "Modifier l'élément d'action",
+    "eventActionItems": "Mesures à prendre pour l’événement",
     "isCompleted": "Terminé",
     "latest": "Le plus récent",
+    "makeActive": "Rendre actif",
+    "markCompletion": "Marquer l'achèvement",
     "no": "Non",
     "noActionItems": "Pas d'éléments d'action",
     "options": "Options",
