--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -266,7 +266,10 @@
   },
   "organizationActionItems": {
     "actionItemCategory": "Categoría del ítem de acción",
+    "actionItemActive": "Elemento de acción activo",
+    "actionItemCompleted": "Elemento de acción completado",
     "actionItemDetails": "Detalles del ítem de acción",
+    "actionItemStatus": "Estado del elemento de acción",
     "assignee": "Asignado",
     "assigner": "Asignador",
     "assignmentDate": "Fecha de asignación",
@@ -282,8 +285,11 @@
     "dueDate": "Fecha de vencimiento",
     "earliest": "Lo más temprano",
     "editActionItem": "Editar ítem de acción",
+    "eventActionItems": "Elementos de acción del evento",
     "isCompleted": "Completado",
     "latest": "Lo más reciente",
+    "makeActive": "Activar",
+    "markCompletion": "Marcar finalización",
     "no": "No",
     "noActionItems": "No hay ítems de acción",
     "options": "Opciones",
