--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -295,7 +295,10 @@
   },
   "organizationActionItems": {
     "actionItemCategory": "行动项目类别",
+    "actionItemActive": "活动措施项",
+    "actionItemCompleted": "已完成操作项",
     "actionItemDetails": "行动项目详情",
+    "actionItemStatus": "措施项状态",
     "assignee": "受让人",
     "assigner": "分配者",
     "assignmentDate": "分配日期",
@@ -311,8 +314,11 @@
     "dueDate": "到期日",
     "earliest": "最早",
     "editActionItem": "编辑行动项目",
+    "eventActionItems": "事件操作项",
     "isCompleted": "已完成",
     "latest": "最新",
+    "makeActive": "激活",
+    "markCompletion": "标记完成",
     "no": "否",
     "noActionItems": "无行动项目",
     "options": "选项",
