--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -271,7 +271,10 @@
   },
   "organizationActionItems": {
     "actionItemCategory": "Action Item Category",
+    "actionItemActive": "Action Item Active",
+    "actionItemCompleted": "Action Item Completed",
     "actionItemDetails": "Action Item Details",
+    "actionItemStatus": "Action Item Status",
     "assignee": "Assignee",
     "assigner": "Assigner",
     "assignmentDate": "Assignment Date",
@@ -287,13 +290,16 @@
     "dueDate": "Due Date",
     "earliest": "Earliest",
     "editActionItem": "Edit Action Item",
+    "eventActionItems": "Event Action Items",
     "isCompleted": "Completed",
     "latest": "Latest",
+    "makeActive": "Make Active",
+    "markCompletion": "Mark Completion",
     "no": "No",
     "noActionItems": "No Action Items",
     "options": "Options",
-    "preCompletionNotes": "Pre Completion Notes",
-    "postCompletionNotes": "Post Completion Notes",
+    "preCompletionNotes": "Notes",
+    "postCompletionNotes": "Completion Notes",
     "selectActionItemCategory": "Select an action item category",
     "selectAssignee": "Select an assignee",
     "status": "Status",
