feat: Redesigned Profile Settings screen for Talawa User Portal
- Implemented the redesign of user portal settings page as it is given in figma design.
- Ensured there are some components working like the upload picture, d.o.b of the user and the reset changes button.
- Made the page responsive across all the screens.
- All the modified code is covered by tests and ensured no other functionality is affected.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -704,13 +704,28 @@
     "article": "Article"
   },
   "settings": {
+    "settings": "Settings",
     "profileSettings": "Profile Settings",
     "firstName": "First Name",
     "lastName": "Last Name",
+    "gender": "Gender",
     "emailAddress": "Email Address",
-    "updateImage": "Update Image",
+    "phoneNumber": "Phone Number",
+    "displayImage": "Display Image",
+    "chooseFile": "Choose File",
+    "birthDate": "Birth Date",
+    "grade": "Educational Grade",
+    "empStatus": "Employment Status",
+    "maritalStatus": "Marital Status",
+    "address": "Address",
+    "state": "City/State",
+    "country": "Country",
+    "resetChanges": "Reset Changes",
     "saveChanges": "Save Changes",
-    "updateProfile": "Update Profile",
+    "profileDetails": "Profile Details",
+    "deleteUserMessage": "By clicking on Delete User button your user will be permanently deleted along with its events, tags and all related data.",
+    "copyLink": "Copy Profile Link",
+    "deleteUser": "Delete User",
     "otherSettings": "Other Settings",
     "changeLanguage": "Change Language"
   },
