--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -702,13 +702,28 @@
     "article": "लेख"
   },
   "settings": {
+    "settings": "सेटिंग्स",
     "profileSettings": "पार्श्वचित्र समायोजन",
     "firstName": "पहला नाम",
     "lastName": "उपनाम",
-    "emailAddress": "मेल पता",
-    "updateImage": "छवि अद्यतन करें",
-    "saveChanges": "परिवर्तनों को सुरक्षित करें",
-    "updateProfile": "प्रोफ़ाइल अपडेट करें",
+    "gender": "लिंग",
+    "emailAddress": "ईमेल पता",
+    "phoneNumber": "फोन नंबर",
+    "displayImage": "प्रदर्शन छवि",
+    "chooseFile": "फ़ाइल चुनें",
+    "birthDate": "जन्म तिथि",
+    "grade": "शैक्षिक ग्रेड",
+    "empStatus": "रोजगार की स्थिति",
+    "maritalStatus": "वैवाहिक स्थिति",
+    "address": "पता",
+    "state": "शहर / राज्य",
+    "country": "देश",
+    "resetChanges": "परिवर्तन रीसेट करें",
+    "saveChanges": "परिवर्तन सहेजें",
+    "profileDetails": "प्रोफ़ाइल विवरण",
+    "deleteUserMessage": "उपयोगकर्ता हटाएं बटन पर क्लिक करने से, आपका उपयोगकर्ता, उसकी घटनाओं, टैग्स और सभी संबंधित डेटा के साथ स्थायी रूप से हटा दिया जाएगा।",
+    "copyLink": "प्रोफ़ाइल लिंक कॉपी करें",
+    "deleteUser": "उपयोगकर्ता हटाएं",
     "otherSettings": "अन्य सेटिंग्स",
     "changeLanguage": "भाषा बदलें"
   },
