--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -701,15 +701,30 @@
     "article": "Artículo"
   },
   "settings": {
+    "settings": "Ajustes",
     "profileSettings": "Configuración de perfil",
     "firstName": "Nombre de pila",
     "lastName": "Apellido",
-    "emailAddress": "dirección de correo electrónico",
-    "updateImage": "Actualizar imagen",
+    "gender": "Género",
+    "emailAddress": "Dirección de correo electrónico",
+    "phoneNumber": "Número de teléfono",
+    "displayImage": "Imagen de perfil",
+    "chooseFile": "Elegir archivo",
+    "birthDate": "Fecha de nacimiento",
+    "grade": "Nivel educativo",
+    "empStatus": "Situación laboral",
+    "maritalStatus": "Estado civil",
+    "address": "Dirección",
+    "state": "Ciudad/Estado",
+    "country": "País",
+    "resetChanges": "Restablecer cambios",
     "saveChanges": "Guardar cambios",
-    "updateProfile": "Actualización del perfil",
-    "otherSettings": "Otras Configuraciones",
-    "changeLanguage": "Cambiar Idioma"
+    "profileDetails": "Detalles del perfil",
+    "deleteUserMessage": "Al hacer clic en el botón Eliminar usuario, su usuario se eliminará permanentemente junto con sus eventos, etiquetas y todos los datos relacionados.",
+    "copyLink": "Copiar enlace del perfil",
+    "deleteUser": "Eliminar usuario",
+    "otherSettings": "Otras configuraciones",
+    "changeLanguage": "Cambiar idioma"
   },
   "donate": {
     "donateTo": "Donar a",
