--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -700,13 +700,28 @@
     "article": "Article"
   },
   "settings": {
+    "settings": "Paramètres",
     "profileSettings": "Paramètres de profil",
     "firstName": "Prénom",
     "lastName": "Nom de famille",
+    "gender": "Genre",
     "emailAddress": "Adresse e-mail",
-    "updateImage": "Mettre à jour l'image",
-    "saveChanges": "Sauvegarder les modifications",
-    "updateProfile": "Mettre à jour le profil",
+    "phoneNumber": "Numéro de téléphone",
+    "displayImage": "Image de profil",
+    "chooseFile": "Choisir un fichier",
+    "birthDate": "Date de naissance",
+    "grade": "Niveau scolaire",
+    "empStatus": "Situation professionnelle",
+    "maritalStatus": "État civil",
+    "address": "Adresse",
+    "state": "Ville/État",
+    "country": "Pays",
+    "resetChanges": "Réinitialiser les modifications",
+    "saveChanges": "Enregistrer les modifications",
+    "profileDetails": "Détails du profil",
+    "deleteUserMessage": "En cliquant sur le bouton Supprimer l'utilisateur, votre utilisateur sera supprimé définitivement ainsi que ses événements, tags et toutes les données associées.",
+    "copyLink": "Copier le lien du profil",
+    "deleteUser": "Supprimer l'utilisateur",
     "otherSettings": "Autres paramètres",
     "changeLanguage": "Changer la langue"
   },
