--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -703,13 +703,28 @@
     "article": "文章"
   },
   "settings": {
-    "profileSettings": "配置文件設置",
+    "settings": "设置",
+    "profileSettings": "配置文件设置",
     "firstName": "名",
     "lastName": "姓",
-    "emailAddress": "電子郵件地址",
-    "updateImage": "更新圖片",
+    "gender": "性别",
+    "emailAddress": "电子邮件地址",
+    "phoneNumber": "电话号码",
+    "displayImage": "个人资料图片",
+    "chooseFile": "选择文件",
+    "birthDate": "出生日期",
+    "grade": "教育程度",
+    "empStatus": "就业状况",
+    "maritalStatus": "婚姻状况",
+    "address": "地址",
+    "state": "城市/州",
+    "country": "国家",
+    "resetChanges": "重置更改",
     "saveChanges": "保存更改",
-    "updateProfile": "更新个人信息",
+    "profileDetails": "个人资料详细信息",
+    "deleteUserMessage": "点击“删除用户”按钮后，您的用户将 永久删除，其事件、标签以及所有相关数据也将被删除。",
+    "copyLink": "复制个人资料链接",
+    "deleteUser": "删除用户",
     "otherSettings": "其他设置",
     "changeLanguage": "更改语言"
   },
