Add support to add member to an org

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -210,7 +210,10 @@
     "searchFullName": "Enter Full Name",
     "people": "People",
     "sort": "Search by Role",
-    "actions": "Actions"
+    "actions": "Actions",
+    "addMembers": "Add Members",
+    "existingUser": "Existing User",
+    "newUser": "New User"
   },
   "userListCard": {
     "joined": "Joined",
