fix: Fixed select options and screen layouts
- Added select options for gender, marital status, employement status and country.
- Changed the layouts accoriding to the screen width by keeping the profile section on the top for
  screen width less than 768px i.e tablet-size.
- Ensured changes are covered by tests and affect no other functionality

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -727,7 +727,23 @@
     "copyLink": "Copy Profile Link",
     "deleteUser": "Delete User",
     "otherSettings": "Other Settings",
-    "changeLanguage": "Change Language"
+    "changeLanguage": "Change Language",
+    "sgender": "Select gender",
+    "gradePlaceholder": "Enter Grade",
+    "sEmpStatus": "Select employement status",
+    "female": "Female",
+    "male": "Male",
+    "employed": "Employed",
+    "other": "Other",
+    "sMaritalStatus": "Select marital status",
+    "unemployed": "Unemployed",
+    "married": "Married",
+    "single": "Single",
+    "widowed": "Widowed",
+    "divorced": "Divorced",
+    "selectCountry": "Select a country",
+    "enterState": "Enter City or State",
+    "joined": "Joined"
   },
   "donate": {
     "donateTo": "Donate to",
