--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -723,7 +723,23 @@
     "copyLink": "Copier le lien du profil",
     "deleteUser": "Supprimer l'utilisateur",
     "otherSettings": "Autres paramètres",
-    "changeLanguage": "Changer la langue"
+    "changeLanguage": "Changer la langue",
+    "sgender": "Sélectionner le genre",
+    "gradePlaceholder": "Entrer la note",
+    "sEmpStatus": "Sélectionner le statut d'emploi",
+    "male": "Homme",
+    "female": "Femme",
+    "other": "Autre",
+    "employed": "Employé(e)",
+    "unemployed": "Sans emploi",
+    "sMaritalStatus": "Sélectionner l'état civil",
+    "single": "Célibataire",
+    "married": "Marié(e)",
+    "divorced": "Divorcé(e)",
+    "widowed": "Veuf(ve)",
+    "enterState": "Entrer la ville ou l'état",
+    "selectCountry": "Sélectionner un pays",
+    "joined": "Rejoint"
   },
   "donate": {
     "donateTo": "Faire un don à",
