--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -725,7 +725,23 @@
     "copyLink": "प्रोफ़ाइल लिंक कॉपी करें",
     "deleteUser": "उपयोगकर्ता हटाएं",
     "otherSettings": "अन्य सेटिंग्स",
-    "changeLanguage": "भाषा बदलें"
+    "changeLanguage": "भाषा बदलें",
+    "sgender": "लिंग चुनें",
+    "gradePlaceholder": "ग्रेड दर्ज करें",
+    "sEmpStatus": "रोजगार की स्थिति चुनें",
+    "male": "पुरुष",
+    "female": "महिला",
+    "other": "अन्य",
+    "employed": "नियोजित",
+    "unemployed": "बेरोजगार",
+    "sMaritalStatus": "वैवाहिक स्थिति चुनें",
+    "single": "अविवाहित",
+    "married": "विवाहित",
+    "divorced": "तलाकशुदा",
+    "widowed": "विधवा",
+    "enterState": "शहर या राज्य दर्ज करें",
+    "selectCountry": "देश चुनें",
+    "joined": "शामिल हुआ"
   },
   "donate": {
     "donateTo": "दान दें",
