--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -724,7 +724,23 @@
     "copyLink": "Copiar enlace del perfil",
     "deleteUser": "Eliminar usuario",
     "otherSettings": "Otras configuraciones",
-    "changeLanguage": "Cambiar idioma"
+    "changeLanguage": "Cambiar idioma",
+    "sgender": "Seleccionar género",
+    "gradePlaceholder": "Ingresar grado",
+    "sEmpStatus": "Seleccionar estado de empleo",
+    "male": "Masculino",
+    "female": "Femenino",
+    "other": "Otro",
+    "employed": "Empleado",
+    "unemployed": "Desempleado",
+    "sMaritalStatus": "Seleccionar estado civil",
+    "single": "Soltero",
+    "married": "Casado",
+    "divorced": "Divorciado",
+    "widowed": "Viudo",
+    "enterState": "Ingresar ciudad o estado",
+    "selectCountry": "Seleccionar un país",
+    "joined": "Unido"
   },
   "donate": {
     "donateTo": "Donar a",
