--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -726,7 +726,23 @@
     "copyLink": "复制个人资料链接",
     "deleteUser": "删除用户",
     "otherSettings": "其他设置",
-    "changeLanguage": "更改语言"
+    "changeLanguage": "更改语言",
+    "sgender": "选择性别",
+    "gradePlaceholder": "输入成绩",
+    "sEmpStatus": "选择就业状态",
+    "male": "男性",
+    "female": "女性",
+    "other": "其他",
+    "employed": "已 employed",
+    "unemployed": "失业",
+    "sMaritalStatus": "选择婚姻状况",
+    "single": "单身",
+    "married": "已婚",
+    "divorced": "离婚",
+    "widowed": "鰥寡",
+    "enterState": "输入城市或州",
+    "selectCountry": "选择国家/地区",
+    "joined": "加入"
   },
   "donate": {
     "donateTo": "捐贈給",
