Update localization strings for personal details

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -627,7 +627,7 @@
     "personalInfoHeading": "Personal Information",
     "contactInfoHeading": "Contact Information",
     "actionsHeading": "Actions",
-    "personalDetailsHeading": "Personal Details",
+    "personalDetailsHeading": "Profile Details",
     "appLanguageCode": "Choose Language",
     "delete": "Delete User",
     "saveChanges": "Save Changes",
