--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -622,7 +622,7 @@
     "personalInfoHeading": "Informations personnelles",
     "contactInfoHeading": "Coordonnées",
     "actionsHeading": "Actions",
-    "personalDetailsHeading": "Détails personnels",
+    "personalDetailsHeading": "Détails du profil",
     "appLanguageCode": "Choisir la langue",
     "delete": "Supprimer l'utilisateur",
     "saveChanges": "Enregistrer les modifications",
