--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -624,7 +624,7 @@
     "personalInfoHeading": "व्यक्तिगत जानकारी",
     "contactInfoHeading": "संपर्क जानकारी",
     "actionsHeading": "कार्रवाई",
-    "personalDetailsHeading": "व्यक्तिगत विवरण",
+    "personalDetailsHeading": "प्रोफ़ाइल विवरण",
     "appLanguageCode": "भाषा चुनें",
     "delete": "उपयोगकर्ता को हटाएं",
     "saveChanges": "परिवर्तन सहेजें",
