--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -623,7 +623,7 @@
     "personalInfoHeading": "Información Personal",
     "contactInfoHeading": "Información de Contacto",
     "actionsHeading": "Acciones",
-    "personalDetailsHeading": "Detalles Personales",
+    "personalDetailsHeading": "Detalles del perfil",
     "appLanguageCode": "Elegir Idioma",
     "delete": "Eliminar Usuario",
     "saveChanges": "Guardar Cambios",
