--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -238,7 +238,7 @@
     "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau."
   },
   "organizationEvents": {
-    "title": "Événements Talawa",
+    "title": "Événements",
     "filterByTitle": "Filtrer par titre",
     "filterByLocation": "Filtrer par l'emplacement",
     "filterByDescription": "Filtrer par Description",
@@ -262,7 +262,9 @@
     "enterDescrip": "Entrez la description",
     "eventLocation": "Entrez l'emplacement",
     "eventCreated": "Toutes nos félicitations! L'événement est créé.",
-    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau."
+    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau.",
+    "searchEventName": "Rechercher le nom de l'événement",
+    "eventType": "Type d'événement"
   },
   "organizationActionItems": {
     "actionItemCategory": "Catégorie de l'élément d'action",
