--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -238,7 +238,7 @@
     "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
   },
   "organizationEvents": {
-    "title": "Eventos Talawa",
+    "title": "Eventos",
     "filterByTitle": "Filtrar por Título",
     "filterByLocation": "Filtrar por Ubicación",
     "filterByDescription": "Filtrar por descripción",
@@ -262,6 +262,8 @@
     "enterDescrip": "Introduce la descripción",
     "eventLocation": "Introducir ubicación",
     "eventCreated": "¡Felicidades! Se crea el Evento.",
+    "eventType": "Tipo de evento",
+    "searchEventName": "Buscar nombre del evento",
     "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
   },
   "organizationActionItems": {
