--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -267,7 +267,7 @@
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
   "organizationEvents": {
-    "title": "塔拉瓦事件",
+    "title": "活动",
     "filterByTitle": "按標題過濾",
     "filterByLocation": "按位置過濾",
     "filterByDescription": "按描述過濾",
@@ -291,7 +291,9 @@
     "enterDescrip": "輸入說明",
     "eventLocation": "輸入位置",
     "eventCreated": "恭喜！事件已創建。",
-    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
+    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。",
+    "searchEventName": "搜索活动名称",
+    "eventType": "活动类型"
   },
   "organizationActionItems": {
     "actionItemCategory": "行动项目类别",
