--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -39,6 +39,34 @@
     "numeric_value_check": "Atleaset one numeric value",
     "special_char_check": "Atleast one special character"
   },
+  "funds": {
+    "title": "Talawa Funds",
+    "createFund": "Create",
+    "fundName": "Fund Name",
+    "fundId": "Fund ID",
+    "fundOptions": "Opitons",
+    "noFunds": "No Funds Found",
+    "fundDetails": "Fund Details",
+    "taxDeductible": "Tax Deductible",
+    "enterfundName": "Enter Fund Name",
+    "enterfundId": "Enter Fund ID",
+    "default": "Default Fund",
+    "archived": "Archived",
+    "nonArchive": "Non-Archived",
+    "fundCreate": "Create Fund",
+    "fundUpdate": "Update Fund",
+    "fundDelete": "Delete Fund",
+    "no": "No",
+    "yes": "Yes",
+    "archiveFund": "Archive Fund",
+    "archiveFundMsg": "On Archiving this fund will remove it from the fund listing.Thisaction can be undone",
+    "fundCreated": "Fund created successfully",
+    "fundUpdated": "Fund updated successfully",
+    "fundDeleted": "Fund deleted successfully",
+    "fundArchived": "Fund archived successfully",
+    "fundUnarchived": "Fund unarchived successfully",
+    "deleteFundMsg": "Do you want to remove this fund?"
+  },
   "latestEvents": {
     "eventCardTitle": "Upcoming Events",
     "eventCardSeeAll": "See All",
