--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -357,6 +357,28 @@
     "fundUnarchived": "फंड सफलतापूर्वक गैर संग्रहीत किया गया",
     "deleteFundMsg": "क्या आप इस फंड को हटाना चाहते हैं?"
   },
+
+  "fundCampaign": {
+    "title": "तलवा फंड अभियान",
+    "campaignName": "अभियान का नाम",
+    "startDate": "प्रारंभ तिथि",
+    "endDate": "समाप्ति तिथि",
+    "campaignOptions": "अभियान विकल्प",
+    "fundingGoal": "वित्तीय लक्ष्य",
+    "addCampaign": "अभियान जोड़ें",
+    "createdCampaign": "अभियान सफलतापूर्वक बनाया गया",
+    "updatedCampaign": "अभियान सफलतापूर्वक अपडेट किया गया",
+    "deletedCampaign": "अभियान सफलतापूर्वक हटाया गया",
+    "deleteCampaignMsg": "क्या आप इस अभियान को हटाना चाहते हैं?",
+    "noCampaigns": "कोई अभियान नहीं",
+    "createCampaign": "अभियान बनाएँ",
+    "updateCampaign": "अभियान अपडेट करें",
+    "deleteCampaign": "अभियान हटाएं",
+    "no": "नहीं",
+    "yes": "हाँ",
+    "currency": "मुद्रा",
+    "selectCurrency": "मुद्रा चुनें"
+  },
   "orgPost": {
     "title": "तलवा पोस्ट्स",
     "searchPost": "पोस्ट खोजें",
