Fixed Unauthorized Access

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -473,6 +473,7 @@
   "pageNotFound": {
     "title": "404 Not Found",
     "talawaAdmin": "Talawa Admin",
+    "talawaUser": "Talawa User",
     "404": "404",
     "notFoundMsg": "Oops! The Page you requested was not found!",
     "backToHome": "Back to Home"
