--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -469,6 +469,7 @@
   "pageNotFound": {
     "title": "404 नहीं मिला",
     "talawaAdmin": "तलावा एडमिन",
+    "talawaUser": "तलावा उपयोगकर्ता",
     "404": "404",
     "notFoundMsg": "ओह! आपके द्वारा अनुरोधित पृष्ठ नहीं मिला!",
     "backToHome": "घर वापिस जा रहा हूँ"
