Implemented logic to register and add member to the organization

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -209,7 +209,23 @@
     "searchLastName": "Entrer le nom de famille",
     "people": "Personnes",
     "sort": "Trier par rôle",
-    "actions": "Actions"
+    "actions": "Actions",
+    "existingUser": "utilisateur existant",
+    "newUser": "Nouvel Utilisateur",
+    "firstName": "Prénom",
+    "enterFirstName": "Entrez votre prénom",
+    "lastName": "Nom de famille",
+    "enterLastName": "Entrez votre nom de famille",
+    "emailAddress": "Email Address",
+    "enterEmail": "Entrez votre adresse email",
+    "password": "Mot de passe",
+    "enterPassword": "Tapez votre mot de passe",
+    "confirmPassword": "Confirmez le mot de passe",
+    "enterConfirmPassword": "Entrez votre mot de passe pour confirmer",
+    "organization": "Organization",
+    "create": "Créer",
+    "cancel": "Annuler",
+    "invalidDetailsMessage": "Veuillez entrer des détails valides."
   },
   "userListCard": {
     "joined": "Inscrit",
