--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -209,7 +209,23 @@
     "searchLastName": "अंतिम नाम दर्ज करो",
     "people": "लोग",
     "sort": "भूमिका के आधार पर खोजें",
-    "actions": "क्रियाएँ"
+    "actions": "क्रियाएँ",
+    "existingUser": "मौजूदा उपयोगकर्ता",
+    "newUser": "नए उपयोगकर्ता",
+    "firstName": "पहला नाम",
+    "enterFirstName": "अपना पहला नाम दर्ज करें",
+    "lastName": "अंतिम नाम",
+    "enterLastName": "अपना अंतिम नाम दर्ज करें",
+    "emailAddress": "ईमेल एड्रेस",
+    "enterEmail": "अपना ईमेल पता दर्ज करें",
+    "password": "पासवर्ड",
+    "enterPassword": "अपना पासवर्ड डालें",
+    "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
+    "enterConfirmPassword": "पुष्टि करने के लिए अपना पासवर्ड दर्ज करें",
+    "organization": "संगठन",
+    "create": "बनाएं",
+    "cancel": "रद्द करना",
+    "invalidDetailsMessage": "कृपया मान्य विवरण दर्ज करें।"
   },
   "userListCard": {
     "joined": "में शामिल हो गए",
