--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -217,7 +217,21 @@
     "actions": "Actions",
     "addMembers": "Add Members",
     "existingUser": "Existing User",
-    "newUser": "New User"
+    "newUser": "New User",
+    "firstName": "First Name",
+    "enterFirstName": "Enter your first name",
+    "lastName": "Last Name",
+    "enterLastName": "Enter your last name",
+    "emailAddress": "Email Address",
+    "enterEmail": "Enter your email address",
+    "password": "Password",
+    "enterPassword": "Enter your password",
+    "confirmPassword": "Confirm Password",
+    "enterConfirmPassword": "Enter your password to confirm",
+    "organization": "Organization",
+    "create": "Create",
+    "cancel": "Cancel",
+    "invalidDetailsMessage": "Please enter valid details."
   },
   "userListCard": {
     "joined": "Joined",
