--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -209,7 +209,23 @@
     "searchLastName": "Introduzca el apellido",
     "people": "Personas",
     "sort": "Ordenar por Rol",
-    "actions": "Acciones"
+    "actions": "Acciones",
+    "existingUser": "Usuario existente",
+    "newUser": "Nuevo usuario",
+    "firstName": "Nombre de pila",
+    "enterFirstName": "Ponga su primer nombre",
+    "lastName": "Apellido",
+    "enterLastName": "Ingresa tu apellido",
+    "emailAddress": "correo electrónico",
+    "enterEmail": "Ingrese su dirección de correo electrónico",
+    "password": "Contraseña",
+    "enterPassword": "Ingresa tu contraseña",
+    "confirmPassword": "confirmar Contraseña",
+    "enterConfirmPassword": "Ingrese su contraseña para confirmar",
+    "organization": "Organización",
+    "create": "Crear",
+    "cancel": "Cancelar",
+    "invalidDetailsMessage": "Ingrese detalles válidos."
   },
   "userListCard": {
     "joined": "Unido",
